--- a/App.Api/Views/Home/Index.cshtml
+++ b/App.Api/Views/Home/Index.cshtml
@@ -1,20 +1,31 @@
-﻿<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+﻿@model App.Api.Models.Home.DashboardViewModel
+@using App.Service.Message
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-        a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-        is an ideal platform for building RESTful applications on the .NET Framework.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
+        <h2>Feed on Facebook</h2>
+        <ul>
+            @foreach (MessageListItem item in Model.Messages)
+            {
+                if (string.IsNullOrWhiteSpace(item.Message)) { continue; }
+                <li>@string.Format("{0}({1})", item.Message, item.Id)</li>
+            }
+        </ul>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
+        <h2>Post new comment</h2>
+        <form action="/home/PostMessage">
+            <div>
+                <label>Id</label><br />
+                <input type="text" name="id" />
+            </div>
+            <div>
+                <label>Message</label><br />
+                <textarea name="message" cols="30" rows="3"></textarea>
+            </div>
+            <div>
+                <button type="submit" value="Send">Send</button>
+            </div>
+        </form>
     </div>
     <div class="col-md-4">
         <h2>Web Hosting</h2>
